--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -2,6 +2,7 @@
   "appName": { "message": "FB Ad Generator" },
   "appDesc": { "message": "Generieren und kopieren Sie Facebook Anzeigentexte mit ChatGPT." },
   "designByLinkText": { "message": "Design by Lipa LIFE" },
+  "noticeText": { "message": "Diese Erweiterung hilft beim Generieren von Anzeigentexten. Kopieren Sie den generierten Text und fügen Sie ihn im Facebook Ads Manager ein." },
   "inputContentTitle": { "message": "Eingabe Inhalt" },
   "copywriterStyleLabel": { "message": "Copywriter Stil:" },
   "defaultCopywriter": { "message": "Default (Experten-Texter)" },
@@ -44,19 +45,19 @@
   "howToUseStepInput": { "message": "<strong>Inhalt eingeben:</strong> Fügen Sie Ihre Produktbeschreibung, Landingpage-Texte oder Angebotsdetails in den Bereich \"Eingabe Inhalt\" ein." },
   "howToUseStepStyle": { "message": "<strong>Copywriter-Stil & Ansprache:</strong> Wählen Sie den Stil eines berühmten Texters (oder Standard) und die Anredeform (Du/Sie)." },
   "howToUseStepGenerate": { "message": "<strong>Generieren:</strong> Klicken Sie auf \"Anzeigentext generieren\", um Primärtext, Überschrift und Beschreibung zu erstellen. Das Tool versucht, 3 Versionen zu generieren." },
-  "howToUseStepReviewV1": { "message": "<strong>Prüfen & Kopieren (Version 1):</strong> Die erste generierte Version wird in den Haupt-Vorschaufeldern angezeigt. Diese Felder sind editierbar. Klicken Sie auf das Kopiersymbol neben jedem Feld, um diesen Teil von Version 1 in Ihre Zwischenablage zu kopieren." },
+  "howToUseStepReviewV1": { "message": "<strong>Prüfen & Kopieren (Version 1):</strong> Die erste generierte Version wird in den Haupt-Vorschaufeldern angezeigt. Klicken Sie auf das Kopiersymbol neben jedem Feld, um diesen Teil von Version 1 in Ihre Zwischenablage zu kopieren." },
   "howToUseStepReviewTabs": { "message": "<strong>Prüfen & Kopieren (Alle Versionen - Tabs):</strong> Unter der Vorschau von Version 1 erscheint ein Tab-Bereich." },
   "howToUseStepReviewTabsSub1": { "message": "Klicken Sie auf die Tabs \"Primärtexte\", \"Überschriften\" oder \"Beschreibungen\"." },
   "howToUseStepReviewTabsSub2": { "message": "Jeder Tab zeigt alle generierten Versionen (z.B. Version 1, 2, 3) für diese spezifische Anzeigenkomponente." },
   "howToUseStepReviewTabsSub3": { "message": "Klicken Sie auf das Kopiersymbol neben dem Text einer beliebigen Version, um ihn zu kopieren." },
-  "howToUseStepSaveV1": { "message": "<strong>Speichern (V1):</strong> Klicken Sie auf \"Speichern (V1)\", um die aktuelle Eingabe, Auswahl und den ersten generierten (oder editierten) Anzeigentext im Archiv zu speichern." },
+  "howToUseStepSaveV1": { "message": "<strong>Speichern (V1):</strong> Klicken Sie auf \"Speichern (V1)\", um die aktuelle Eingabe, Auswahl und den ersten generierten Anzeigentext im Archiv zu speichern." },
   "howToUseStepArchive": { "message": "<strong>Archiv:</strong> Klicken Sie auf \"Archiv\", um zuvor gespeicherte Anzeigentexte anzuzeigen, zu laden (nur Version 1) oder zu löschen." },
   "howToUseStepReset": { "message": "<strong>Zurücksetzen:</strong> Klicken Sie auf \"Zurücksetzen\", um die Eingabe und alle Vorschaufelder (einschließlich Tabs) zu löschen. Ihr Text wird ansonsten automatisch gespeichert." },
   "settingsInfoTitle": { "message": "Einstellungen (⚙️ Symbol):" },
   "settingsInfoText": { "message": "Sie <strong>müssen</strong> Ihren OpenAI API-Schlüssel konfigurieren und können Ihr bevorzugtes ChatGPT-Modell in den Einstellungen auswählen. Klicken Sie auf das Zahnradsymbol (⚙️) in der Kopfzeile, um zu den Einstellungen zu gelangen. GPT-4o ist standardmäßig ausgewählt." },
   "troubleshootingTitle": { "message": "Fehlerbehebung:" },
   "troubleshootingNoText": { "message": "<strong>Kein Text generiert:</strong> Überprüfen Sie, ob Ihr API-Schlüssel korrekt eingegeben wurde und Guthaben aufweist. Stellen Sie außerdem sicher, dass Ihre Internetverbindung stabil ist und das ausgewählte Modell mit Ihrem Schlüssel zugänglich ist." },
-  "troubleshootingFormatting": { "message": "<strong>Textformatierung:</strong> Die KI versucht, Absätze und Aufzählungspunkte gegebenenfalls zu verwenden. Wenn die Formatierung nicht perfekt ist, müssen Sie nach dem Einfügen oder direkt in den editierbaren Feldern von Version 1 möglicherweise geringfügige Anpassungen vornehmen." },
+  "troubleshootingFormatting": { "message": "<strong>Textformatierung:</strong> Die KI versucht, Absätze und Aufzählungspunkte gegebenenfalls zu verwenden. Wenn die Formatierung nicht perfekt ist, müssen Sie nach dem Einfügen möglicherweise geringfügige Anpassungen vornehmen." },
   "systemPromptInfoTitle": { "message": "System-Prompt für die Generierung:" },
   "systemPromptInfoText": { "message": "Der folgende Prompt (entsprechend Ihrer aktuellen Auswahl für Texter und Anrede) wird verwendet, um die KI anzuweisen:" },
   "happyAdCreatingText": { "message": "<em>Viel Erfolg beim Erstellen Ihrer Anzeigen!</em>" },
@@ -83,7 +84,7 @@
   "versionItemTitle": { "message": "$1 Version $2", "placeholders": { "textType": { "content": "$1" }, "versionNumber": { "content": "$2" } } },
   "copyButtonTitleGeneric": { "message": "$1 kopieren", "placeholders": { "textType": { "content": "$1" } } },
   "naText": { "message": "N/A" },
-  "backButton": { "message": "Zurück" },
-  "errorFindArchiveEntry": { "message": "Fehler: Archiv-Eintrag konnte nicht gefunden werden." },
-  "errorCopyingToClipboard": { "message": "$1 konnte nicht kopiert werden. Details siehe Konsole.", "placeholders": { "fieldName": { "content": "$1" } } }
+  "langDE": { "message": "DE" },
+  "langEN": { "message": "EN" },
+  "backButton": { "message": "Zurück" }
 }
