--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -2,7 +2,6 @@
   "appName": { "message": "FB Ad Generator" },
   "appDesc": { "message": "Generieren und kopieren Sie Facebook Anzeigentexte mit ChatGPT." },
   "designByLinkText": { "message": "Design by Lipa LIFE" },
-  "noticeText": { "message": "Diese Erweiterung hilft beim Generieren von Anzeigentexten. Kopieren Sie den generierten Text und fügen Sie ihn im Facebook Ads Manager ein." },
   "inputContentTitle": { "message": "Eingabe Inhalt" },
   "copywriterStyleLabel": { "message": "Copywriter Stil:" },
   "defaultCopywriter": { "message": "Default (Experten-Texter)" },
@@ -14,7 +13,7 @@
   "formOfAddressDu": { "message": "Du (informell)" },
   "formOfAddressSie": { "message": "Sie (formell)" },
   "inputContentPlaceholder": { "message": "Fügen Sie hier den Inhalt Ihrer Landingpage, Ihr Angebot oder Ihre Stellenbeschreibung ein..." },
-  "saveV1Button": { "message": "Speichern (V1)" },
+  "saveAdButton": { "message": "Anzeige speichern" },
   "archiveButton": { "message": "Archiv" },
   "generateAdCopyButton": { "message": "Anzeigentext generieren" },
   "adPreviewTitle": { "message": "Anzeigenvorschau" },
@@ -44,14 +43,14 @@
   "howToUseIntro": { "message": "So verwenden Sie die Erweiterung:" },
   "howToUseStepInput": { "message": "<strong>Inhalt eingeben:</strong> Fügen Sie Ihre Produktbeschreibung, Landingpage-Texte oder Angebotsdetails in den Bereich \"Eingabe Inhalt\" ein." },
   "howToUseStepStyle": { "message": "<strong>Copywriter-Stil & Ansprache:</strong> Wählen Sie den Stil eines berühmten Texters (oder Standard) und die Anredeform (Du/Sie)." },
-  "howToUseStepGenerate": { "message": "<strong>Generieren:</strong> Klicken Sie auf \"Anzeigentext generieren\", um Primärtext, Überschrift und Beschreibung zu erstellen. Das Tool versucht, 3 Versionen zu generieren." },
-  "howToUseStepReviewV1": { "message": "<strong>Prüfen & Kopieren (Version 1):</strong> Die erste generierte Version wird in den Haupt-Vorschaufeldern angezeigt. Klicken Sie auf das Kopiersymbol neben jedem Feld, um diesen Teil von Version 1 in Ihre Zwischenablage zu kopieren." },
+  "howToUseStepGenerate": { "message": "<strong>Generieren:</strong> Klicken Sie auf \"Anzeigentext generieren\", um Primärtext, Überschrift und Beschreibung zu erstellen. Das Tool versucht, 3 Versionen zu generieren. Alle generierten Versionen werden in Tabs angezeigt." },
+  "howToUseStepReviewV1": { "message": "<strong>Prüfen & Kopieren (Version 1):</strong> Die erste generierte Version wird in den Haupt-Vorschaufeldern angezeigt. Diese Felder sind editierbar. Klicken Sie auf das Kopiersymbol neben jedem Feld, um diesen Teil von Version 1 in Ihre Zwischenablage zu kopieren." },
   "howToUseStepReviewTabs": { "message": "<strong>Prüfen & Kopieren (Alle Versionen - Tabs):</strong> Unter der Vorschau von Version 1 erscheint ein Tab-Bereich." },
   "howToUseStepReviewTabsSub1": { "message": "Klicken Sie auf die Tabs \"Primärtexte\", \"Überschriften\" oder \"Beschreibungen\"." },
   "howToUseStepReviewTabsSub2": { "message": "Jeder Tab zeigt alle generierten Versionen (z.B. Version 1, 2, 3) für diese spezifische Anzeigenkomponente." },
   "howToUseStepReviewTabsSub3": { "message": "Klicken Sie auf das Kopiersymbol neben dem Text einer beliebigen Version, um ihn zu kopieren." },
-  "howToUseStepSaveV1": { "message": "<strong>Speichern (V1):</strong> Klicken Sie auf \"Speichern (V1)\", um die aktuelle Eingabe, Auswahl und den ersten generierten Anzeigentext im Archiv zu speichern." },
-  "howToUseStepArchive": { "message": "<strong>Archiv:</strong> Klicken Sie auf \"Archiv\", um zuvor gespeicherte Anzeigentexte anzuzeigen, zu laden (nur Version 1) oder zu löschen." },
+  "howToUseStepSaveAd": { "message": "<strong>Anzeige speichern:</strong> Klicken Sie auf \"Anzeige speichern\", um die aktuelle Eingabe, Auswahl und alle generierten Anzeigenversionen im Archiv zu speichern." },
+  "howToUseStepArchive": { "message": "<strong>Archiv:</strong> Klicken Sie auf \"Archiv\", um zuvor gespeicherte Anzeigensets anzuzeigen, zu laden oder zu löschen. Das Laden eines Anzeigensets stellt alle seine Versionen wieder her." },
   "howToUseStepReset": { "message": "<strong>Zurücksetzen:</strong> Klicken Sie auf \"Zurücksetzen\", um die Eingabe und alle Vorschaufelder (einschließlich Tabs) zu löschen. Ihr Text wird ansonsten automatisch gespeichert." },
   "settingsInfoTitle": { "message": "Einstellungen (⚙️ Symbol):" },
   "settingsInfoText": { "message": "Sie <strong>müssen</strong> Ihren OpenAI API-Schlüssel konfigurieren und können Ihr bevorzugtes ChatGPT-Modell in den Einstellungen auswählen. Klicken Sie auf das Zahnradsymbol (⚙️) in der Kopfzeile, um zu den Einstellungen zu gelangen. GPT-4o ist standardmäßig ausgewählt." },
@@ -64,17 +63,21 @@
   "archiveViewTitle": { "message": "Archiv" },
   "savedAdCopiesTitle": { "message": "Gespeicherte Anzeigentexte" },
   "emptyArchiveMessageText": { "message": "Ihr Archiv ist leer. Speichern Sie eine Anzeige, um sie hier zu sehen." },
-  "archiveLoadButton": { "message": "Laden (V1)" },
+  "archiveLoadButtonText": { "message": "Anzeige laden" },
   "archiveDeleteButton": { "message": "Löschen" },
   "archiveItemSaved": { "message": "Gespeichert:" },
   "archiveItemInput": { "message": "Eingabe:" },
   "archiveItemPrimaryV1": { "message": "Primär (V1):" },
-  "archiveLoadedAlert": { "message": "Anzeigentext (Version 1) aus Archiv geladen." },
+  "archiveLoadedAlert": { "message": "Anzeigentext aus Archiv geladen. Alle Versionen wurden wiederhergestellt." },
+  "archiveFindErrorAlert": { "message": "Archivierter Eintrag nicht gefunden." },
   "archiveDeleteConfirm": { "message": "Sind Sie sicher, dass Sie dieses archivierte Element löschen möchten?" },
   "archiveDeletedAlert": { "message": "Archiviertes Element gelöscht." },
+  "nothingToSaveAlert": { "message": "Es gibt nichts zu speichern. Bitte geben Sie Inhalt ein oder generieren Sie einen Anzeigentext." },
+  "archiveSavedAlert": { "message": "Anzeige im Archiv gespeichert." },
   "pleasePasteContentAlert": { "message": "Bitte fügen Sie zuerst Ihren Inhalt ein." },
   "apiKeyNotSetAlert": { "message": "OpenAI API-Schlüssel ist nicht festgelegt. Bitte konfigurieren Sie ihn in den Einstellungen. (Klicken Sie auf das ⚙️ Symbol)" },
   "copiedToClipboardAlert": { "message": "$1 in die Zwischenablage kopiert!", "placeholders": { "fieldName": { "content": "$1" } } },
+  "copyErrorAlert": { "message": "Fehler beim Kopieren von $1 in die Zwischenablage.", "placeholders": { "fieldName": { "content": "$1" } } },
   "noValidContentToCopyAlert": { "message": "Kein gültiger Inhalt zum Kopieren für $1.", "placeholders": { "fieldName": { "content": "$1" } } },
   "tabPrimaryTexts": { "message": "Primärtexte" },
   "tabHeadlines": { "message": "Überschriften" },
@@ -84,7 +87,5 @@
   "versionItemTitle": { "message": "$1 Version $2", "placeholders": { "textType": { "content": "$1" }, "versionNumber": { "content": "$2" } } },
   "copyButtonTitleGeneric": { "message": "$1 kopieren", "placeholders": { "textType": { "content": "$1" } } },
   "naText": { "message": "N/A" },
-  "langDE": { "message": "DE" },
-  "langEN": { "message": "EN" },
   "backButton": { "message": "Zurück" }
 }
