--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,10 +1,11 @@
 {
   "appName": { "message": "FB Ad Generator" },
-  "appDesc": { "message": "Generieren und kopieren Sie Facebook Anzeigentexte mit ChatGPT." },
-  "designByLinkText": { "message": "Design by Lipa LIFE" },
+  "appDesc": { "message": "Generiere und kopiere Facebook Anzeigentexte mit ChatGPT." },
+  "designByLinkText": { "message": "Design von Lipa LIFE" },
+  "noticeText": { "message": "Diese Erweiterung hilft beim Generieren von Anzeigentexten. Kopieren Sie den generierten Text und fügen Sie ihn im Facebook Ads Manager ein." },
   "inputContentTitle": { "message": "Eingabe Inhalt" },
   "copywriterStyleLabel": { "message": "Copywriter Stil:" },
-  "defaultCopywriter": { "message": "Default (Experten-Texter)" },
+  "defaultCopywriter": { "message": "Standard (Experten-Copywriter)" },
   "ogilvyCopywriter": { "message": "David Ogilvy" },
   "bauligCopywriter": { "message": "Andreas Baulig" },
   "jungCopywriter": { "message": "Holger Jung" },
@@ -12,8 +13,8 @@
   "formOfAddressLabel": { "message": "Ansprache:" },
   "formOfAddressDu": { "message": "Du (informell)" },
   "formOfAddressSie": { "message": "Sie (formell)" },
-  "inputContentPlaceholder": { "message": "Fügen Sie hier den Inhalt Ihrer Landingpage, Ihr Angebot oder Ihre Stellenbeschreibung ein..." },
-  "saveAdButton": { "message": "Anzeige speichern" },
+  "inputContentPlaceholder": { "message": "Fügen Sie hier Ihren Landingpage-Inhalt, Ihr Angebot oder Ihre Stellenbeschreibung ein..." },
+  "saveV1Button": { "message": "Speichern (V1)" },
   "archiveButton": { "message": "Archiv" },
   "generateAdCopyButton": { "message": "Anzeigentext generieren" },
   "adPreviewTitle": { "message": "Anzeigenvorschau" },
@@ -41,43 +42,39 @@
   "aboutText": { "message": "Diese Chrome-Erweiterung hilft Ihnen, überzeugende Anzeigentexte für Facebook Ads mit KI zu generieren." },
   "howToUseTitle": { "message": "Anwendung:" },
   "howToUseIntro": { "message": "So verwenden Sie die Erweiterung:" },
-  "howToUseStepInput": { "message": "<strong>Inhalt eingeben:</strong> Fügen Sie Ihre Produktbeschreibung, Landingpage-Texte oder Angebotsdetails in den Bereich \"Eingabe Inhalt\" ein." },
-  "howToUseStepStyle": { "message": "<strong>Copywriter-Stil & Ansprache:</strong> Wählen Sie den Stil eines berühmten Texters (oder Standard) und die Anredeform (Du/Sie)." },
-  "howToUseStepGenerate": { "message": "<strong>Generieren:</strong> Klicken Sie auf \"Anzeigentext generieren\", um Primärtext, Überschrift und Beschreibung zu erstellen. Das Tool versucht, 3 Versionen zu generieren. Alle generierten Versionen werden in Tabs angezeigt." },
-  "howToUseStepReviewV1": { "message": "<strong>Prüfen & Kopieren (Version 1):</strong> Die erste generierte Version wird in den Haupt-Vorschaufeldern angezeigt. Diese Felder sind editierbar. Klicken Sie auf das Kopiersymbol neben jedem Feld, um diesen Teil von Version 1 in Ihre Zwischenablage zu kopieren." },
+  "howToUseStepInput": { "message": "<strong>Eingabe Inhalt:</strong> Fügen Sie Ihre Produktbeschreibung, Ihren Landingpage-Text oder Angebotsdetails in den Bereich \"Eingabe Inhalt\" ein." },
+  "howToUseStepStyle": { "message": "<strong>Copywriter Stil & Ansprache:</strong> Wählen Sie den Stil eines berühmten Texters (oder Standard) und die Anredeform (Du/Sie)." },
+  "howToUseStepGenerate": { "message": "<strong>Generieren:</strong> Klicken Sie auf \"Anzeigentext generieren\", um Primärtext, Überschrift und Beschreibung zu erstellen. Das Tool versucht, 3 Versionen zu generieren." },
+  "howToUseStepReviewV1": { "message": "<strong>Prüfen & Kopieren (Version 1):</strong> Die erste generierte Version wird in den Hauptfeldern \"Anzeigenvorschau\" angezeigt. Klicken Sie auf das Kopiersymbol neben jedem Feld (Primärtext, Überschrift, Beschreibung), um diesen Teil von Version 1 in Ihre Zwischenablage zu kopieren." },
   "howToUseStepReviewTabs": { "message": "<strong>Prüfen & Kopieren (Alle Versionen - Tabs):</strong> Unter der Vorschau von Version 1 erscheint ein Tab-Bereich." },
   "howToUseStepReviewTabsSub1": { "message": "Klicken Sie auf die Tabs \"Primärtexte\", \"Überschriften\" oder \"Beschreibungen\"." },
-  "howToUseStepReviewTabsSub2": { "message": "Jeder Tab zeigt alle generierten Versionen (z.B. Version 1, 2, 3) für diese spezifische Anzeigenkomponente." },
+  "howToUseStepReviewTabsSub2": { "message": "Jeder Tab zeigt alle generierten Versionen (z.B. Version 1, Version 2, Version 3) für diese spezifische Anzeigenkomponente." },
   "howToUseStepReviewTabsSub3": { "message": "Klicken Sie auf das Kopiersymbol neben dem Text einer beliebigen Version, um ihn zu kopieren." },
-  "howToUseStepSaveAd": { "message": "<strong>Anzeige speichern:</strong> Klicken Sie auf \"Anzeige speichern\", um die aktuelle Eingabe, Auswahl und alle generierten Anzeigenversionen im Archiv zu speichern." },
-  "howToUseStepArchive": { "message": "<strong>Archiv:</strong> Klicken Sie auf \"Archiv\", um zuvor gespeicherte Anzeigensets anzuzeigen, zu laden oder zu löschen. Das Laden eines Anzeigensets stellt alle seine Versionen wieder her." },
-  "howToUseStepReset": { "message": "<strong>Zurücksetzen:</strong> Klicken Sie auf \"Zurücksetzen\", um die Eingabe und alle Vorschaufelder (einschließlich Tabs) zu löschen. Ihr Text wird ansonsten automatisch gespeichert." },
+  "howToUseStepSaveV1": { "message": "<strong>Speichern (V1):</strong> Klicken Sie auf \"Speichern (V1)\", um die aktuelle Eingabe, Auswahl und den ersten generierten Anzeigentext im Archiv zu speichern." },
+  "howToUseStepArchive": { "message": "<strong>Archiv:</strong> Klicken Sie auf \"Archiv\", um zuvor gespeicherte Anzeigentexte anzuzeigen, zu laden (nur Version 1) oder zu löschen." },
+  "howToUseStepReset": { "message": "<strong>Zurücksetzen:</strong> Klicken Sie auf \"Zurücksetzen\", um die Eingabe und alle Vorschaufelder (einschließlich Tabs) zu leeren. Ihr Text wird ansonsten automatisch gespeichert." },
   "settingsInfoTitle": { "message": "Einstellungen (⚙️ Symbol):" },
-  "settingsInfoText": { "message": "Sie <strong>müssen</strong> Ihren OpenAI API-Schlüssel konfigurieren und können Ihr bevorzugtes ChatGPT-Modell in den Einstellungen auswählen. Klicken Sie auf das Zahnradsymbol (⚙️) in der Kopfzeile, um zu den Einstellungen zu gelangen. GPT-4o ist standardmäßig ausgewählt." },
+  "settingsInfoText": { "message": "Sie <strong>müssen</strong> Ihren OpenAI API-Schlüssel konfigurieren und können Ihr bevorzugtes ChatGPT-Modell in den Einstellungen auswählen. Klicken Sie auf das Zahnrad-Symbol (⚙️) in der Kopfzeile, um zu den Einstellungen zu gelangen. GPT-4o ist standardmäßig ausgewählt." },
   "troubleshootingTitle": { "message": "Fehlerbehebung:" },
-  "troubleshootingNoText": { "message": "<strong>Kein Text generiert:</strong> Überprüfen Sie, ob Ihr API-Schlüssel korrekt eingegeben wurde und Guthaben aufweist. Stellen Sie außerdem sicher, dass Ihre Internetverbindung stabil ist und das ausgewählte Modell mit Ihrem Schlüssel zugänglich ist." },
-  "troubleshootingFormatting": { "message": "<strong>Textformatierung:</strong> Die KI versucht, Absätze und Aufzählungspunkte gegebenenfalls zu verwenden. Wenn die Formatierung nicht perfekt ist, müssen Sie nach dem Einfügen möglicherweise geringfügige Anpassungen vornehmen." },
+  "troubleshootingNoText": { "message": "<strong>Kein Text generiert:</strong> Überprüfen Sie, ob Ihr API-Schlüssel korrekt eingegeben wurde und über Guthaben verfügt. Stellen Sie außerdem sicher, dass Ihre Internetverbindung stabil ist und das ausgewählte Modell mit Ihrem Schlüssel zugänglich ist." },
+  "troubleshootingFormatting": { "message": "<strong>Textformatierung:</strong> Die KI versucht, Absätze und Aufzählungspunkte gegebenenfalls zu verwenden. Wenn die Formatierung nicht perfekt ist, müssen Sie möglicherweise nach dem Einfügen geringfügige Anpassungen vornehmen." },
   "systemPromptInfoTitle": { "message": "System-Prompt für die Generierung:" },
-  "systemPromptInfoText": { "message": "Der folgende Prompt (entsprechend Ihrer aktuellen Auswahl für Texter und Anrede) wird verwendet, um die KI anzuweisen:" },
-  "happyAdCreatingText": { "message": "<em>Viel Erfolg beim Erstellen Ihrer Anzeigen!</em>" },
+  "systemPromptInfoText": { "message": "Der folgende Prompt (der Ihre aktuelle Auswahl für Texter und Anredeform widerspiegelt) wird verwendet, um die KI anzuweisen:" },
+  "happyAdCreatingText": { "message": "<em>Viel Spaß beim Erstellen von Anzeigen!</em>" },
   "archiveViewTitle": { "message": "Archiv" },
   "savedAdCopiesTitle": { "message": "Gespeicherte Anzeigentexte" },
   "emptyArchiveMessageText": { "message": "Ihr Archiv ist leer. Speichern Sie eine Anzeige, um sie hier zu sehen." },
-  "archiveLoadButtonText": { "message": "Anzeige laden" },
+  "archiveLoadButton": { "message": "Laden (V1)" },
   "archiveDeleteButton": { "message": "Löschen" },
   "archiveItemSaved": { "message": "Gespeichert:" },
   "archiveItemInput": { "message": "Eingabe:" },
   "archiveItemPrimaryV1": { "message": "Primär (V1):" },
-  "archiveLoadedAlert": { "message": "Anzeigentext aus Archiv geladen. Alle Versionen wurden wiederhergestellt." },
-  "archiveFindErrorAlert": { "message": "Archivierter Eintrag nicht gefunden." },
+  "archiveLoadedAlert": { "message": "Anzeigentext (Version 1) aus dem Archiv geladen." },
   "archiveDeleteConfirm": { "message": "Sind Sie sicher, dass Sie dieses archivierte Element löschen möchten?" },
   "archiveDeletedAlert": { "message": "Archiviertes Element gelöscht." },
-  "nothingToSaveAlert": { "message": "Es gibt nichts zu speichern. Bitte geben Sie Inhalt ein oder generieren Sie einen Anzeigentext." },
-  "archiveSavedAlert": { "message": "Anzeige im Archiv gespeichert." },
   "pleasePasteContentAlert": { "message": "Bitte fügen Sie zuerst Ihren Inhalt ein." },
   "apiKeyNotSetAlert": { "message": "OpenAI API-Schlüssel ist nicht festgelegt. Bitte konfigurieren Sie ihn in den Einstellungen. (Klicken Sie auf das ⚙️ Symbol)" },
   "copiedToClipboardAlert": { "message": "$1 in die Zwischenablage kopiert!", "placeholders": { "fieldName": { "content": "$1" } } },
-  "copyErrorAlert": { "message": "Fehler beim Kopieren von $1 in die Zwischenablage.", "placeholders": { "fieldName": { "content": "$1" } } },
   "noValidContentToCopyAlert": { "message": "Kein gültiger Inhalt zum Kopieren für $1.", "placeholders": { "fieldName": { "content": "$1" } } },
   "tabPrimaryTexts": { "message": "Primärtexte" },
   "tabHeadlines": { "message": "Überschriften" },
@@ -87,5 +84,18 @@
   "versionItemTitle": { "message": "$1 Version $2", "placeholders": { "textType": { "content": "$1" }, "versionNumber": { "content": "$2" } } },
   "copyButtonTitleGeneric": { "message": "$1 kopieren", "placeholders": { "textType": { "content": "$1" } } },
   "naText": { "message": "N/A" },
-  "backButton": { "message": "Zurück" }
+  "langDE": { "message": "DE" },
+  "langEN": { "message": "EN" },
+  "backButton": { "message": "Zurück" },
+  "apiKeyInfoText": { "message": "Ihren OpenAI API-Schlüssel erhalten Sie" },
+  "apiKeyLinkText": { "message": "hier." },
+  "targetAudienceLabel": { "message": "Zielgruppe:" },
+  "targetAudiencePlaceholder": { "message": "Beschreiben Sie Ihre Zielgruppe (optional)..." },
+  "howToUseStepTargetAudience": { "message": "<strong>Zielgruppe (Optional):</strong> Beschreiben Sie Ihre Zielgruppe, um den Text noch besser anzupassen." },
+  "saveAdButton": { "message": "Anzeige speichern" },
+  "archiveLoadButtonText": { "message": "Laden" },
+  "nothingToSaveAlert": { "message": "Nichts zu speichern. Bitte geben Sie Inhalt ein oder generieren Sie zuerst eine Anzeige." },
+  "archiveSavedAlert": { "message": "Anzeigenset im Archiv gespeichert." },
+  "archiveFindErrorAlert": { "message": "Fehler: Konnte das archivierte Element nicht finden." },
+  "copyErrorAlert": { "message": "$1 konnte nicht in die Zwischenablage kopiert werden.", "placeholders": { "fieldName": { "content": "$1" } } }
 }
